--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^6.9.0",
+    "mongoose": "^6.9.1",
     "nanoid": "^4.0.1",
     "pino": "^8.8.0",
     "zod": "^3.20.2"
