--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Chukwuka Ezem",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -18,7 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
-    "nanoid": "^4.0.1",
+    "nanoid": "^3.3.4",
     "pino": "^8.8.0",
     "zod": "^3.20.2"
   },
